[fix:style] Fix icon position when line numbers are visible
This was broken on #5b89f7c0.

--- a/static/css/commentIcon.css
+++ b/static/css/commentIcon.css
@@ -2,7 +2,7 @@
   display: block;
   z-index: 1;
   margin-left: 760px;
-  padding-left: 25px;
+  padding-left: 55px;
 }
 
 /* when line numbers are not visible, we need to move icons to the left */
